Tweak projects and update resume

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 							<p class="hidden-phone">I'm a <span class="hue">Web Developer</span> in the New York City metro area.<br/>
 							I have a background in business and math, but I'm a<br/>
 							<span class="hue">technologist at heart</span>. I'm interested in opportunities that<br/>
-							will allow me to couple that <span class="hue">passion</span> with my business<br/>
-							acumen. My interests are <span class="hue">crafting beautiful code</span>,<br/>
+							will allow me to couple that <span class="hue">passion</span> with my natural<br/>
+							business acumen. My interests are <span class="hue">crafting beautiful code</span>,<br/>
 							<span class="hue">building practical things</span>, and <span class="hue">growing new businesses</span>.</p>
 						</div>
 
@@ -170,7 +170,7 @@
 									<span>There's A Board<br/><a class="btn btn-primary" href="http://theresaboard.com">live</a> <a class="btn btn-primary" href="https://github.com/theresaboard">code</a></span>
 								</h6>
 								<p>
-									An open source mentorship app initially designed around the simple idea of matching students with student-tutors based on availability and study topic, There's A Board evolved into a powerful support platform allowing students, alumns, and employee-mentors to connect for studying, tutoring, and skill development. There's A Board was forked by Dev Bootcamp NYC to be used as their tool for managing both paid and volunteer mentors.
+									An open source mentorship app designed around the simple idea of matching students with student-tutors based on availability and study topic, There's A Board evolved into a powerful support platform allowing students, alumns, and employee-mentors to connect for studying, tutoring, and skill development. There's A Board was forked by Dev Bootcamp NYC to be used as their tool for managing both paid and volunteer mentors.
 								</p>
 							</div>
 							<div class="pad25"></div>
@@ -224,7 +224,7 @@
 									<span>Flash Forward<br/><a class="btn btn-primary" href="https://github.com/dcr8898/Flash-Forward">code</a></span>
 								</h6>
 								<p>
-									A web-based flash card application that allows users to either choose an existing deck or create their own interactively.  Flash-forward also allows users to return to incomplete games and provides statistical results for all games played.  Flash-forward was built with Sinatra, ActiveRecord, and PostgreSQL, using agile development practices.
+									A web-based flash card application that allows users to either choose an existing deck or create their own interactively.  Flash-forward allows users to return to incomplete games and provides statistical results for all games played.  Flash-forward was built with Sinatra, ActiveRecord, and PostgreSQL, using agile development practices.
 								</p>
 							</div>
 							<div class="pad25"></div>
@@ -271,10 +271,10 @@ var Damian_Rossney = (function() {
               "math, and the legal field. I am an entrepreneur and           " +
               "technologist at heart. I enjoy solving complex problems,      " +
               "building practical things, and developing new businesses. I   " +
-              "have developed apps using Ruby, Rails, Sinatra, JavaScript,   " +
-              "SQL, HTML5, and CSS3. I have utilized Test-Driven Development " +
-              "and follow Agile methodologies. I continuously work to expand " +
-              "my skill set and learn new technologies.";
+              "develop apps using Ruby, Rails, Sinatra, JavaScript, SQL,     " +
+              "HTML5, and CSS3. I utilize Test-Driven Development and follow " +
+              "Agile methodologies. I continuously work to expand my skill   " +
+              "set and learn new technologies.";
 
   var skills = {
 
