Added transparency to dragon and controls

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 						</div>
 
 						<!-- Caption -->
-						<div class="tp-caption lfb bg rev-text hidden-sm hidden-xs" data-x="760" data-y="center" data-speed="1400" data-start="1800" data-easing="easeOutExpo">
+						<div id="dragon_controls" class="tp-caption lfb bg rev-text hidden-sm hidden-xs" data-x="760" data-y="center" data-speed="1400" data-start="1800" data-easing="easeOutExpo">
 						  <form id="controls">
 						    Dragon 1<br/>
 						    <label for="dragon1color">Color: <input type="color" name="dragon1color" value="#FF69B4"></label>
