Move slide 2 to slide 3

--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
 					</li>
 					<!-- END SLIDE 1 -->
 
-					<!-- Slide 2 -->
-					<li data-transition="slideleft">
-						<img src="img/slider/slider2.jpg" alt="" />
+					<!-- Slide 3 -->
+					<li data-transition="slideright">
+						<img src="img/slider/slider3.jpg" alt="" />
 
 						<!-- Caption -->
 						<div class="tp-caption lfr" data-x="75" data-y="center" data-speed="2400" data-start="800" data-easing="easeOutExpo">
@@ -130,7 +130,7 @@
 						</div>
 
 					</li>
-					<!-- END SLIDE 2 -->
+					<!-- END SLIDE 3 -->
 
 				</ul>
 				<div class="tp-bannertimer tp-bottom"></div>
