Add 311 slider at slider 2

--- a/index.html
+++ b/index.html
@@ -94,6 +94,25 @@
 					</li>
 					<!-- END SLIDE 1 -->
 
+					<!-- Slide 2 -->
+					<li data-transition="slideleft">
+						<img src="img/slider/slider2.png" alt="" />
+
+						<!-- Caption -->
+						<div class="tp-caption lfr bg rev-text" data-x="50" data-y="350" data-speed="1400" data-start="1800" data-easing="easeOutExpo">
+							<p>A visual exploration of <span class='hue'>NYC 311 call data</span><br/>
+							by <span class='hue'>complaint type</span> and <span class='hue'>hour of day</span> in</br/>
+							which calls were placed. <a class='btn btn-xs btn-primary' href='https://dcr8898.github.io/311_by_the_hour/'>live</a> <a class='btn btn-xs btn-primary' href='https://github.com/dcr8898/311_by_the_hour'>code</a></p>
+						</div>
+
+						<!-- Caption -->
+						<div class="caption lfr stl rev-title big" data-x="45" data-y="100" data-speed="1000" data-start="1000" data-easing="easeOutExpo">
+							311 by the Hour
+						</div>
+
+					</li>
+					<!-- END SLIDE 2 -->
+
 					<!-- Slide 3 -->
 					<li data-transition="slideright">
 						<img src="img/slider/slider3.jpg" alt="" />
