Change 311 links to buttons

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 						<div class="tp-caption lfr bg rev-text" data-x="50" data-y="350" data-speed="1400" data-start="1800" data-easing="easeOutExpo">
 							<p>A visual exploration of <span class='hue'>NYC 311 call data</span><br/>
 							by <span class='hue'>complaint type</span> and <span class='hue'>hour of day</span> in</br/>
-							which calls were placed. <a class='btn btn-xs btn-primary' href='https://dcr8898.github.io/311_by_the_hour/'>live</a> <a class='btn btn-xs btn-primary' href='https://github.com/dcr8898/311_by_the_hour'>code</a></p>
+							which calls were placed. <a class='btn btn-xs btn-primary' href='https://dcr8898.github.io/311_by_the_hour/' target="_blank">live</a> <a class='btn btn-xs btn-primary' href='https://github.com/dcr8898/311_by_the_hour' target="_blank">code</a></p>
 						</div>
 
 						<!-- Caption -->
