--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
 						<!-- Caption -->
 						<div class="caption lfr stl rev-title big" data-x="45" data-y="100" data-speed="1000" data-start="1000" data-easing="easeOutExpo">
-							311 by the Hour
+							311 BY THE HOUR
 						</div>
 
 					</li>
