Remove some unnecessary div hiding behavior

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 						<!-- Caption -->
 						<div class="tp-caption lfb bg rev-text text-center" data-x="550" data-y="center" data-speed="1400" data-start="1800" data-easing="easeOutExpo">
-							<p class="hidden-phone">I'm a <span class="hue">Web Developer</span> in the New York City metro area.<br/>
+							<p>I'm a <span class="hue">Web Developer</span> in the New York City metro area.<br/>
 							I have a background in business and math, but I'm a<br/>
 							<span class="hue">technologist at heart</span>. I'm interested in opportunities that<br/>
 							will allow me to couple that <span class="hue">passion</span> with my natural<br/>
