--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
 					</div>
 					<!--info boxes-->
 					<div class="row is-table-row">
+						<!-- There's a Board -->
 						<div class="col-sm-6 col-md-4">
 							<div class="tile">
 								<div class="intro-icon-disc cont-large"><i class="fa fa-calendar-o fa-flip-vertical intro-icon-large"></i></div>
@@ -195,6 +196,7 @@
 							<div class="pad25"></div>
 						</div>
 
+						<!-- Turtle Overflow -->
 						<div class="col-sm-6 col-md-4">
 							<div class="tile">
 								<div class="intro-icon-disc cont-large"><i class="fa fa-tasks intro-icon-large"></i></div>
@@ -208,6 +210,7 @@
 							<div class="pad25"></div>
 						</div>
 
+						<!-- Survey Gorilla -->
 						<div class="col-sm-6 col-md-4">
 							<div class="tile">
 								<div class="intro-icon-disc cont-large"><i class="fa fa-pie-chart intro-icon-large"></i></div>
@@ -220,9 +223,11 @@
 							</div>
 							<div class="pad25"></div>
 						</div>
+
 					</div>
 
 					<div class="row is-table-row">
+						<!-- clíque -->
 						<div class="col-sm-6 col-md-4">
 							<div class="tile">
 								<div class="intro-icon-disc cont-large"><i class="fa fa-bullhorn intro-icon-large"></i></div>
@@ -236,6 +241,7 @@
 							<div class="pad25"></div>
 						</div>
 
+						<!-- Flash-Forward -->
 						<div class="col-sm-6 col-md-4">
 							<div class="tile">
 								<div class="intro-icon-disc cont-large"><i class="fa fa-arrow-circle-right intro-icon-large"></i></div>
@@ -249,6 +255,7 @@
 							<div class="pad25"></div>
 						</div>
 
+						<!-- 2048 -->
 						<div class="col-sm-6 col-md-4">
 							<div class="tile">
 								<div class="intro-icon-disc cont-large"><i class="fa fa-th intro-icon-large"></i></div>
