Add 311 project tile to gallery

--- a/index.html
+++ b/index.html
@@ -182,6 +182,21 @@
 					</div>
 					<!--info boxes-->
 					<div class="row is-table-row">
+						<!-- 311 by the Hour -->
+						<div class="col-sm-6 col-md-4">
+							<div class="tile">
+								<div class="intro-icon-disc cont-large"><i class="fa fa-area-chart intro-icon-large"></i></div>
+								<h6>
+									<span>311 by the Hour<br/><a class="btn btn-primary" href="https://dcr8898.github.io/311_by_the_hour">live</a> <a class="btn btn-primary" href="https://github.com/dcr8898/311_by_the_hour">code</a></span>
+								</h6>
+								<p>
+									A stunning example of big data visualization. <strong>311 by the Hour</strong> is a visual exploration of NYC 311 call data by complaint type and hour of day in which calls were placed.<br/>
+									Written in JavaScript using the awesome <a href='http://www.highcharts.com/'>Highcharts</a> library, drawing from <a href='https://nycopendata.socrata.com/Social-Services/311-Service-Requests-from-2010-to-Present/erm2-nwe9'>NYC OpenData</a> resources.
+								</p>
+							</div>
+							<div class="pad25"></div>
+						</div>
+
 						<!-- There's a Board -->
 						<div class="col-sm-6 col-md-4">
 							<div class="tile">
@@ -210,6 +225,9 @@
 							<div class="pad25"></div>
 						</div>
 
+					</div>
+
+					<div class="row is-table-row">
 						<!-- Survey Gorilla -->
 						<div class="col-sm-6 col-md-4">
 							<div class="tile">
@@ -224,9 +242,6 @@
 							<div class="pad25"></div>
 						</div>
 
-					</div>
-
-					<div class="row is-table-row">
 						<!-- clíque -->
 						<div class="col-sm-6 col-md-4">
 							<div class="tile">
@@ -255,6 +270,9 @@
 							<div class="pad25"></div>
 						</div>
 
+					</div>
+
+					<div class="row is-table-row">
 						<!-- 2048 -->
 						<div class="col-sm-6 col-md-4">
 							<div class="tile">
