Add emphasis to title in project gallery

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 								</h6>
 								<p>
 									A stunning example of big data visualization. <strong>311 by the Hour</strong> is a visual exploration of NYC 311 call data by complaint type and hour of day in which calls were placed.<br/>
-									Written in JavaScript using the awesome <a href='http://www.highcharts.com/'>Highcharts</a> library, drawing from <a href='https://nycopendata.socrata.com/Social-Services/311-Service-Requests-from-2010-to-Present/erm2-nwe9'>NYC OpenData</a> resources.
+									<strong>311 by the Hour</strong> is written in JavaScript using the awesome <a href='http://www.highcharts.com/'>Highcharts</a> library, drawing from <a href='https://nycopendata.socrata.com/Social-Services/311-Service-Requests-from-2010-to-Present/erm2-nwe9'>NYC OpenData</a> resources.
 								</p>
 							</div>
 							<div class="pad25"></div>
@@ -205,7 +205,7 @@
 									<span>There's A Board<br/><a class="btn btn-primary" href="http://theresaboard.com">live</a> <a class="btn btn-primary" href="https://github.com/theresaboard">code</a></span>
 								</h6>
 								<p>
-									An open source mentorship app designed around the simple idea of matching students with student-tutors based on availability and study topic, There's A Board evolved into a powerful support platform allowing students, alumns, and employee-mentors to connect for studying, tutoring, and skill development. There's A Board was forked by Dev Bootcamp NYC to be used as their tool for managing both paid and volunteer mentors.
+									An open source mentorship app designed around the simple idea of matching students with student-tutors based on availability and study topic, <strong>There's A Board</strong> evolved into a powerful support platform allowing students, alumns, and employee-mentors to connect for studying, tutoring, and skill development. <strong>There's A Board</strong> was forked by Dev Bootcamp NYC to be used as their tool for managing both paid and volunteer mentors.
 								</p>
 							</div>
 							<div class="pad25"></div>
@@ -219,7 +219,7 @@
 									<span>Turtle Overflow<br/><a class="btn btn-primary" href="https://turtle-overflow.herokuapp.com/">live</a> <a class="btn btn-primary" href="https://github.com/dcr8898/turtle-overflow">code</a></span>
 								</h6>
 								<p>
-									A clone of the popular Stack Overflow site. Turtle-overflow was built as an exercise to explore Ruby on Rails, ActiveRecord, and Agile development practices.
+									A clone of the popular Stack Overflow site. <strong>Turtle-overflow</strong> was built as an exercise to explore Ruby on Rails, ActiveRecord, and Agile development practices.
 								</p>
 							</div>
 							<div class="pad25"></div>
@@ -236,7 +236,7 @@
 									<span>Survey Gorilla<br/><a class="btn btn-primary" href="https://survey-gorilla.herokuapp.com/">live</a> <a class="btn btn-primary" href="https://github.com/dcr8898/survey-gorilla">code</a></span>
 								</h6>
 								<p>
-									An end-to-end survey creation and poll-taking app, complete with statistical analysis and visual charts of survey results. Survey Gorilla was built primarily with Sinatra, jQuery, ActiveRecord, and Highcharts using agile development practices.
+									An end-to-end survey creation and poll-taking app, complete with statistical analysis and visual charts of survey results. <strong>Survey Gorilla</strong> was built with Sinatra, jQuery, ActiveRecord, and Highcharts using agile development practices.
 								</p>
 							</div>
 							<div class="pad25"></div>
@@ -250,7 +250,7 @@
 									<span>clíque<br/><a class="btn btn-primary" href="https://myclique.herokuapp.com/">live</a> <a class="btn btn-primary" href="https://github.com/dcr8898/clique">code</a></span>
 								</h6>
 								<p>
-									My implementation of the venerable Rails Tutorial by Michael Hartl. Clíque is a real, industrial-strength application built on Ruby on Rails, exploring all of the framework's features, with full unit testing.
+									My implementation of the venerable Rails Tutorial by Michael Hartl. <strong>Clíque</strong> is a real, industrial-strength application built on Ruby on Rails, exploring all of the framework's features, with full unit testing.
 								</p>
 							</div>
 							<div class="pad25"></div>
@@ -264,7 +264,7 @@
 									<span>Flash Forward<br/><a class="btn btn-primary" href="https://github.com/dcr8898/Flash-Forward">code</a></span>
 								</h6>
 								<p>
-									A web-based flash card application that allows users to either choose an existing deck or create their own interactively.  Flash-forward allows users to return to incomplete games and provides statistical results for all games played.  Flash-forward was built with Sinatra, ActiveRecord, and PostgreSQL, using agile development practices.
+									A web-based flash card application that allows users to either choose an existing deck or create their own interactively.  <strong>Flash-forward</strong> allows users to return to incomplete games and provides statistical results for all games played. <strong>Flash-forward</strong> was built with Sinatra, ActiveRecord, and PostgreSQL, using agile development practices.
 								</p>
 							</div>
 							<div class="pad25"></div>
@@ -278,10 +278,10 @@
 							<div class="tile">
 								<div class="intro-icon-disc cont-large"><i class="fa fa-th intro-icon-large"></i></div>
 								<h6>
-									<span>2048<br/><a class="btn btn-primary" href="http://rossney.net/2048">live</a> <a class="btn btn-primary" href="https://github.com/dcr8898/dcr2048">code</a></span>
+									<span>dcr2048<br/><a class="btn btn-primary" href="http://rossney.net/2048">live</a> <a class="btn btn-primary" href="https://github.com/dcr8898/dcr2048">code</a></span>
 								</h6>
 								<p>
-									A clone of the fabulous 2048 game created by Gabriele Cirulli.  dcr2048 is an exercise in writing JavaScript using the MVC pattern.  I intend to further improve the game with some cool CSS transforms.  Stay tuned . . .
+									A clone of the fabulous 2048 game created by Gabriele Cirulli.  <strong>dcr2048</strong> is an exercise in writing JavaScript using the MVC pattern.  I intend to further improve the game with some cool CSS transforms.  Stay tuned . . .
 								</p>
 							</div>
 							<div class="pad25"></div>
