Add articles link to main menu

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
             <li><a href="#projects">Projects</a></li>
             <li><a href="#about-me">About Me</a></li>
             <li><a href="#contact">Contact</a></li>
+            <li><a href="https://www.linkedin.com/in/damianrossney#posts" target="_blank">Articles</a></li>
           </ul>
         </div>
       </div>
@@ -370,17 +371,17 @@
       <span class ="white">Contact</span>
     </div>
     <h3 class="center follow">
-      Want to build something? Have an interesting project or opportunity? Contact me!</h3>
-
-      <div class="follow_us">
-        <a href='&#116;&#101;&#108;&#58;&#57;&#49;&#52;&#50;&#50;&#55;&#52;&#50;&#48;&#50;' title='&#40;&#57;&#49;&#52;&#41;&#32;&#50;&#50;&#55;&#45;&#52;&#50;&#48;&#50;'><span class='fa fa-2x fa-phone'></span></a>
-        <a href='&#109;&#097;&#105;&#108;&#116;&#111;:&#100;&#097;&#109;&#105;&#097;&#110;&#064;&#114;&#111;&#115;&#115;&#110;&#101;&#121;&#046;&#110;&#101;&#116;?&#083;&#117;&#098;&#106;&#101;&#099;&#116;=&#079;&#110;&#108;&#105;&#110;&#101;%&#050;&#048;&#082;&#101;&#115;&#117;&#109;&#101;%&#050;&#048;&#067;&#111;&#110;&#116;&#097;&#099;&#116;' title='&#100;&#97;&#109;&#105;&#97;&#110;&#64;&#114;&#111;&#115;&#115;&#110;&#101;&#121;&#46;&#110;&#101;&#116;'><span class='fa fa-2x fa-envelope'></span></a>
-        <a href='https://github.com/dcr8898' title='GitHub'><span class='fa fa-2x fa-github'></span></a>
-        <a href='https://linkedin.com/in/damianrossney' title='LinkedIn'><span class='fa fa-2x fa-linkedin-square'></span></a>
-        <a href='dl/dcr_res.pdf' download='Damian_Rossney_Resume.pdf' title='Download My Resume'><span class='fa fa-2x fa-file-pdf-o'></span></a>
-      </div>
-      <div class="pad90"></div>
+      Want to build something? Have an interesting project or opportunity? Contact me!
+    </h3>
+    <div class="follow_us">
+      <a href='&#116;&#101;&#108;&#58;&#57;&#49;&#52;&#50;&#50;&#55;&#52;&#50;&#48;&#50;' title='&#40;&#57;&#49;&#52;&#41;&#32;&#50;&#50;&#55;&#45;&#52;&#50;&#48;&#50;'><span class='fa fa-2x fa-phone'></span></a>
+      <a href='&#109;&#097;&#105;&#108;&#116;&#111;:&#100;&#097;&#109;&#105;&#097;&#110;&#064;&#114;&#111;&#115;&#115;&#110;&#101;&#121;&#046;&#110;&#101;&#116;?&#083;&#117;&#098;&#106;&#101;&#099;&#116;=&#079;&#110;&#108;&#105;&#110;&#101;%&#050;&#048;&#082;&#101;&#115;&#117;&#109;&#101;%&#050;&#048;&#067;&#111;&#110;&#116;&#097;&#099;&#116;' title='&#100;&#97;&#109;&#105;&#97;&#110;&#64;&#114;&#111;&#115;&#115;&#110;&#101;&#121;&#46;&#110;&#101;&#116;'><span class='fa fa-2x fa-envelope'></span></a>
+      <a href='https://github.com/dcr8898' title='GitHub'><span class='fa fa-2x fa-github'></span></a>
+      <a href='https://linkedin.com/in/damianrossney' title='LinkedIn'><span class='fa fa-2x fa-linkedin-square'></span></a>
+      <a href='dl/dcr_res.pdf' download='Damian_Rossney_Resume.pdf' title='Download My Resume'><span class='fa fa-2x fa-file-pdf-o'></span></a>
     </div>
+    <div class="pad90"></div>
+  </div>
 
     <!-- footer 2 -->
     <div id="footer2">
