Add eDiscoveryPM.com tile to project gallery

--- a/index.html
+++ b/index.html
@@ -198,6 +198,20 @@
               <div class="pad25"></div>
             </div>
 
+            <!-- eDsicoveryPM.com -->
+            <div class="col-sm-6 col-md-4">
+              <div class="tile">
+                <div class="intro-icon-disc cont-large"><i class="fa fa-users intro-icon-large"></i></div>
+                <h6>
+                  <span>eDiscoveryPM.com<br/><a class="btn btn-primary" href="https://ediscoverypm.com">live</a></span>
+                </h6>
+                <p>
+                  From-scratch development of showcase web site. <strong>eDiscoveryPM.com</strong> is designed both to promote the client's book and to serve as a hub for information and resources on his professional practice area: Project Management in Electronic Discovery. Site is built on WordPress using a customized, responsive theme.
+                </p>
+              </div>
+              <div class="pad25"></div>
+            </div>
+
             <!-- There's a Board -->
             <div class="col-sm-6 col-md-4">
               <div class="tile">
@@ -212,6 +226,9 @@
               <div class="pad25"></div>
             </div>
 
+          </div>
+
+          <div class="row is-table-row">
             <!-- Turtle Overflow -->
             <div class="col-sm-6 col-md-4">
               <div class="tile">
@@ -226,9 +243,6 @@
               <div class="pad25"></div>
             </div>
 
-          </div>
-
-          <div class="row is-table-row">
             <!-- Survey Gorilla -->
             <div class="col-sm-6 col-md-4">
               <div class="tile">
@@ -257,6 +271,9 @@
               <div class="pad25"></div>
             </div>
 
+          </div>
+
+          <div class="row is-table-row">
             <!-- Flash-Forward -->
             <div class="col-sm-6 col-md-4">
               <div class="tile">
@@ -271,9 +288,6 @@
               <div class="pad25"></div>
             </div>
 
-          </div>
-
-          <div class="row is-table-row">
             <!-- 2048 -->
             <div class="col-sm-6 col-md-4">
               <div class="tile">
