Minor changes to about.js

--- a/index.html
+++ b/index.html
@@ -317,13 +317,13 @@
             <span>About Me</span>
           </div>
           <pre class="line-numbers">
-<code class="language-javascript">// file: ~/code/dcr/about.js
-//
-//  USER STORY:
-//         AS A  curious seeker, inveterate learner, and voracious autodidact,
-// I WOULD LIKE  a position that allows me to exercise my skills and creativity
-//  IN ORDER TO  to solve real-world problems with beautiful code.
-
+<code class="language-javascript">/* file: ~/code/dcr/about.js
+ *
+ *  USER STORY:
+ *         AS A  curious seeker, inveterate learner, and voracious autodidact,
+ * I WOULD LIKE  a position that allows me to exercise my skills and creativity
+ *  IN ORDER TO  to solve real-world problems with beautiful code.
+ */
 (function(exports) {
 
   var namespace = "dcr",
