Redirect theresaboard link to dev/demo site

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
               <div class="tile">
                 <div class="intro-icon-disc cont-large"><i class="fa fa-calendar-o fa-flip-vertical intro-icon-large"></i></div>
                 <h6>
-                  <span>There's A Board<br/><a class="btn btn-primary" href="http://theresaboard.com">live</a> <a class="btn btn-primary" href="https://github.com/theresaboard">code</a></span>
+                  <span>There's A Board<br/><a class="btn btn-primary" href="http://mentor-me-dev.herokuapp.com">demo</a> <a class="btn btn-primary" href="https://github.com/theresaboard">code</a></span>
                 </h6>
                 <p>
                   An open source mentorship app designed around the simple idea of matching students with student-tutors based on availability and study topic, <strong>There's A Board</strong> evolved into a powerful support platform allowing students, alumns, and employee-mentors to connect for studying, tutoring, and skill development. <strong>There's A Board</strong> was forked by Dev Bootcamp NYC to be used as their tool for managing both paid and volunteer mentors.
