--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="This is the personal website of Damian C. Rossney. Damian is a novice software engineer. Damian is passionate about technology, business, and the intersection of the two. In his spare time, Damian likes to read, spend time with his children, friends, and loved ones, and to continue honing his developer skills.
   ">
   <meta name="author" content="Damian C. Rossney">
-  <link rel="canonical" href="http://rossney.net/">
+  <link href="http://rossney.net/" rel="canonical">
   <link href='https://fonts.googleapis.com/css?family=Lato:400,700,300' rel='stylesheet' type='text/css'>
   <!--[if IE]>
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
@@ -19,7 +19,7 @@
   <link href="css/font-awesome.min.css" rel="stylesheet">
   <link href="css/theme.css" rel="stylesheet">
   <link href="css/colour.css" rel="stylesheet" type="text/css"/>
-  <link rel="stylesheet" type="text/css" href="rs-plugin/css/settings.css" media="screen" />
+  <link href="rs-plugin/css/settings.css" rel="stylesheet" type="text/css" media="screen" />
   <link href="css/prism.css" rel="stylesheet" type="text/css"/>
   <link href="css/custom.css" rel="stylesheet" type="text/css"/>
   <!--[if lt IE 9]>
