Add second articles link

--- a/index.html
+++ b/index.html
@@ -371,6 +371,7 @@
 }) (typeof webDevs === 'undefined' ? window : webDevs);</code>
           </pre>
           <p class="center">For a print version of my current resume, please clink the pdf link in the Contact section below.</p>
+          <p class="center">You can read my articles on <a href="https://www.linkedin.com/in/damianrossney#posts" target="_blank">LinkedIn</a>.</p>
           <div class="pad25"></div>
         </div>
       </div>
